Projet_GL/src/test/deca/context/valid/unprovided/testObjet/methods/returnIntAsFloat.deca
// Description:
//    ConvFloat de l'expression retournée
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    Créé le 24/01/2018
class A {
      float m(){
      	  return 1 ;
      }
}