Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/fields/unknownFieldType.deca
// Description:
//    Déclaration d'un champ de type inconnu
//
// Resultat: Ligne 11
//    ContextualError : Undefined type : B
//
// Historique:
//    Créé le 24/01/2018

class A{
      B b;
}